-Redesined GUI
-Added some more strings with translation
-Trying to make icon in Popup