@@ -1,3 +1,4 @@
 -Redesined GUI
 -Added some more strings with translation
 -Trying to make icon in Popup
+-Fixed progress bar
